force-app/main/default/objects/CommonAmount__c/CommonAmount__c.object-meta.xml
<CustomObject>
    <label>共通費</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0000}</displayFormat>
        <label>共通費ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>