force-app/main/default/objects/CommonAmount__c/fields/divide__c.field-meta.xml
<CustomField>
    <fullName>divide__c</fullName>
    <defaultValue>false</defaultValue>
    <label>計算</label>
    <type>Checkbox</type>
</CustomField>