force-app/main/default/objects/CommonAmount__c/fields/month__c.field-meta.xml
<CustomField>
    <fullName>month__c</fullName>
    <label>年月</label>
    <length>6</length>
    <type>Text</type>
</CustomField>