force-app/main/default/objects/CommonAmount__c/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <label>大分類</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01:雑誌</fullName>
            </value>
            <value>
                <fullName>02:WEB</fullName>
            </value>
            <value>
                <fullName>03:WEBその他</fullName>
            </value>
            <value>
                <fullName>04:DMPレポーティング</fullName>
            </value>
            <value>
                <fullName>05:ブースト</fullName>
            </value>
            <value>
                <fullName>06:抜刷</fullName>
            </value>
            <value>
                <fullName>07:セミナー</fullName>
            </value>
            <value>
                <fullName>08:スクール</fullName>
            </value>
            <value>
                <fullName>09:カスタム</fullName>
            </value>
            <value>
                <fullName>10:アンケート</fullName>
            </value>
            <value>
                <fullName>11:その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>